--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ build-mindetach-module = true
 enabled = true
 build-mode = "both"                                                   # 'both', 'apk' or 'module'
 excluded-patches = "debugging"                                        # whitespace seperated list of patches to exclude (multiline strings are not supported)
-included-patches = ""                                                 # whitespace seperated list of patches to include
+included-patches = "client-spoof downloads general-ads hdr-auto-brightness minimized-playback open-links-externally premium-heading sponsorblock spoof-app-version video-ads theme"                                                 # whitespace seperated list of patches to include
 version = "auto"                                                      # 'auto', 'latest' or a custom one like '17.40.41'
 exclusive-patches = false                                             # excludes all patches by default
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
